--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -363,7 +363,7 @@ stages:
               pip install pytest pytest-azurepipelines
               # TODO enable spark tests
               # TODO enable sqlalchemy once cloud resources are working again
-              pytest -v --docs-tests -m docs --no-spark --no-sqlalchemy tests/integration/test_script_runner.py
+              pytest -v --docs-tests -m docs --no-spark tests/integration/test_script_runner.py
             displayName: 'pytest'
             env:
               # snowflake credentials
