--- a/azure-pipelines-docs-integration.yml
+++ b/azure-pipelines-docs-integration.yml
@@ -81,7 +81,8 @@ stages:
         - script: |
             sqlcmd -U sa -P "ReallyStrongPwd1234%^&*" -Q "CREATE DATABASE test_ci;" -o create_db_output.txt
             head create_db_output.txt
-            ~~~~~~~~~~~~~~~~~~~~~~~
+          displayName: 'create mssql database'
+
         - script: |
             pip install pytest pytest-azurepipelines
             # TODO enable spark tests
